# Chrome-cli-review-cleaner

./: README.md  pyproject.toml
review_helper/: chrome.py  cli.py  git_config.py  my_reviews.py  pr_urls.py  progress.py  review.py  review_batch.py
